--- a/map/package.json
+++ b/map/package.json
@@ -17,10 +17,12 @@
     "web-vitals": "^2.1.4"
   },
   "devDependencies": {
+    "@types/node": "^18.0.1",
     "@types/react": "^18.0.0",
     "@types/react-dom": "^18.0.0",
     "@vitejs/plugin-react": "^1.3.0",
     "rollup-plugin-external-globals": "^0.6.1",
+    "rollup-plugin-polyfill-node": "^0.10.0",
     "typescript": "^4.6.3",
     "vite": "^2.9.9",
     "vite-plugin-externals": "^0.5.0"
