--- a/point-clouds/package.json
+++ b/point-clouds/package.json
@@ -5,7 +5,8 @@
   "scripts": {
     "dev": "vite",
     "build": "tsc && vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "watch": "nodemon --watch ./src --ext js,jsx,ts,tsx --exec 'yarn build'"
   },
   "dependencies": {
     "@fiftyone/plugins": "../../fiftyone/app/packages/plugins",
@@ -16,9 +17,11 @@
     "three": "^0.141.0"
   },
   "devDependencies": {
+    "@types/node": "^18.0.3",
     "@types/react": "^18.0.0",
     "@types/react-dom": "^18.0.0",
     "@vitejs/plugin-react": "^1.3.0",
+    "nodemon": "^2.0.19",
     "rollup-plugin-external-globals": "^0.6.1",
     "typescript": "^4.6.3",
     "vite": "^2.9.9",
