--- a/point-clouds/package.json
+++ b/point-clouds/package.json
@@ -1,6 +1,5 @@
 {
   "name": "point-clouds",
-  "private": true,
   "version": "0.0.0",
   "scripts": {
     "dev": "vite",
@@ -8,6 +7,7 @@
     "preview": "vite preview",
     "watch": "nodemon --watch ./src --ext js,jsx,ts,tsx --exec 'yarn build'"
   },
+  "files": ["dist"],
   "dependencies": {
     "@fiftyone/plugins": "../../fiftyone/app/packages/plugins",
     "@react-three/drei": "^9.13.0",
