--- a/point-clouds/package.json
+++ b/point-clouds/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "@emotion/styled": "^11.9.3",
     "@fiftyone/plugins": "../../fiftyone/app/packages/plugins",
+    "@fiftyone/utilities": "../../fiftyone/app/packages/utilities",
     "@mui/icons-material": "^5.8.4",
     "@react-three/drei": "^9.13.0",
     "@react-three/fiber": "^8.0.23",
@@ -35,5 +36,6 @@
   },
   "fiftyone": {
     "script": "dist/index.umd.js"
-  }
+  },
+  "packageManager": "yarn@3.2.1"
 }
