--- a/point-clouds/package.json
+++ b/point-clouds/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.0",
   "scripts": {
     "dev": "vite",
-    "build": "tsc && vite build",
+    "build": "vite build",
     "preview": "vite preview",
     "watch": "nodemon --watch ./src --ext js,jsx,ts,tsx --exec 'yarn build'"
   },
@@ -31,7 +31,7 @@
     "nodemon": "^2.0.19",
     "rollup-plugin-external-globals": "^0.6.1",
     "typescript": "^4.6.3",
-    "vite": "^2.9.9",
+    "vite": "^3.0.2",
     "vite-plugin-externals": "^0.5.0"
   },
   "fiftyone": {
