--- a/settings.json
+++ b/settings.json
@@ -1,6 +1,15 @@
 {
   "point-clouds": {
     "enabled": true,
-    "defaultCameraPosition": {"x": 0, "y": 0, "z": 20}
+    "defaultCameraPosition": {"x": 0, "y": 0, "z": 20},
+    "filepathFields": ["filepath", "pcd_filepath"],
+    "pointCloud": {
+      "rotation": [0, 0, 90],
+      "minZ": -2.1
+    },
+    "overlay": {
+      "rotation": [-90, 0, 0],
+      "itemRotation": [0, 90, 0]
+    }
   }
 }
