--- a/map/package.json
+++ b/map/package.json
@@ -15,6 +15,7 @@
     "plotly.js-dist": "^2.12.1",
     "react": "^18.1.0",
     "react-dom": "^18.0.0",
+    "recoil": "^0.7.4",
     "web-vitals": "^2.1.4"
   },
   "devDependencies": {
@@ -30,7 +31,7 @@
   },
   "scripts": {
     "dev": "vite",
-    "build": "tsc && vite build",
+    "build": "vite build",
     "preview": "vite preview"
   }
 }
