remove __pycache__ and update gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,30 @@
-node_modules
-.DS_Store
-dist
+**/*.DS_store
+.vscode
+
+__pycache__
+*.py[cod]
+
+*.egg-info
+.project
+.pydevproject
+**/*.ipynb_checkpoints
+.idea
+*.swp
+
+*~
+
+build/
+dist/
+
+/eta/
+
+/docs/build/
+/docs/source/api/
+
+/bin
+/lib
+coverage.xml
+.coverage.*
+pyvenv.cfg
+
+node_modules/
