--- a/packages/hello_world_op/fiftyone.yml
+++ b/packages/hello_world_op/fiftyone.yml
@@ -1,2 +1,8 @@
 fiftyone:
     version: '*'
+name: hello_world_op
+description: A simple hello world operation
+license: MIT
+version: 1.0.0
+operators:
+    - hello_world_op
