--- a/packages/examples/fiftyone.yml
+++ b/packages/examples/fiftyone.yml
@@ -9,4 +9,4 @@ operators:
     - example_image
     - example_slideshow
     - example_set_field
-    - example_show_output
+    - example_output_styles
