operator placements examples

--- a/plugins/examples/fiftyone.yml
+++ b/plugins/examples/fiftyone.yml
@@ -19,3 +19,5 @@ operators:
   - example_settings
   - example_markdown
   - example_custom_view
+  - example_open_embeddings_panel
+  - example_open_histograms_panel
