--- a/packages/examples/fiftyone.yml
+++ b/packages/examples/fiftyone.yml
@@ -17,3 +17,5 @@ operators:
   - example_settings
   - example_markdown
   - example_custom_view
+  - example_open_embeddings_panel
+  - example_open_histograms_panel
