--- a/plugins/__skeleton__/tsconfig.json
+++ b/plugins/__skeleton__/tsconfig.json
@@ -1,4 +1,5 @@
 {
+    "extends": "./tsconfig.fo.json",
     "compilerOptions": {
         "target": "ESNext",
         "useDefineForClassFields": true,
