--- a/plugins/hello-world/tsconfig.json
+++ b/plugins/hello-world/tsconfig.json
@@ -1,4 +1,5 @@
 {
+    "extends": "./tsconfig.fo.json",
     "compilerOptions": {
         "target": "ESNext",
         "useDefineForClassFields": true,
