add operators in create-plugin template

--- a/__skeleton__/package.json
+++ b/__skeleton__/package.json
@@ -11,8 +11,8 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "react": "^18.2.0",
-    "@fiftyone/plugin-build": "*"
+    "@fiftyone/plugin-build": "*",
+    "react": "^18.2.0"
   },
   "devDependencies": {
     "nodemon": "^2.0.19",
