add plugin dist

--- a/.gitignore
+++ b/.gitignore
@@ -15,6 +15,7 @@ __pycache__
 
 build/
 dist/
+!packages/**/dist
 
 /eta/
 
@@ -31,3 +32,4 @@ node_modules/
 
 packages/fiftyone-docs-search
 packages/watch_importer
+
