--- a/plugins/__skeleton__/fiftyone.yml
+++ b/plugins/__skeleton__/fiftyone.yml
@@ -4,5 +4,5 @@ name: "{{PLUGIN_NAME}}"
 version: "1.0.0"
 description: "Fiftyone starter plugin"
 operators:
-  - {{PLUGIN_NAME}}_greet_py
-  - {{PLUGIN_NAME}}_greet_js
+  - "{{PLUGIN_NAME}}_greet_py"
+  - "{{PLUGIN_NAME}}_greet_js"
