adding uniqueness, mistakenness, and hardness

--- a/plugins/brain/fiftyone.yml
+++ b/plugins/brain/fiftyone.yml
@@ -6,8 +6,11 @@ fiftyone:
 url: https://github.com/voxel51/fiftyone-plugins/blob/main/plugins/brain/README.md
 license: Apache 2.0
 operators:
-  - compute_similarity
   - compute_visualization
+  - compute_similarity
+  - compute_uniqueness
+  - compute_mistakenness
+  - compute_hardness
   - get_brain_info
   - rename_brain_run
   - delete_brain_run
