adding load evaluation view plugin

--- a/plugins/evaluation/fiftyone.yml
+++ b/plugins/evaluation/fiftyone.yml
@@ -8,5 +8,6 @@ license: Apache 2.0
 operators:
   - evaluate_model
   - get_evaluation_info
+  - load_evaluation_view
   - rename_evaluation
   - delete_evaluation
