adding load_annotation_view operator

--- a/plugins/annotation/fiftyone.yml
+++ b/plugins/annotation/fiftyone.yml
@@ -9,5 +9,6 @@ operators:
   - request_annotations
   - load_annotations
   - get_annotation_info
+  - load_annotation_view
   - rename_annotation_run
   - delete_annotation_run
