--- a/plugins/interpolation/package.json
+++ b/plugins/interpolation/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "interpolation",
+    "name": "@voxel51/interpolation",
     "version": "1.0.0",
     "main": "src/InterpolationPlugin.tsx",
     "license": "MIT",
