--- a/plugins/interpolation/fiftyone.yml
+++ b/plugins/interpolation/fiftyone.yml
@@ -4,6 +4,7 @@ version: 1.0.0
 fiftyone:
   version: "*"
 license: Apache 2.0
+url: "https://github.com/voxel51/fiftyone-plugins/blob/main/plugins/interpolation/README.md"
 operators:
   - interpolator
   - open_interpolation_panel
