--- a/plugins/send_to_cvat_new/fiftyone.yml
+++ b/plugins/send_to_cvat_new/fiftyone.yml
@@ -1,4 +1,4 @@
-name: "@voxel51/send_to_cvat"
+name: "@voxel51/send_to_cvat_new"
 description: A collection of import/export utilities
 version: 1.0.0
 fiftyone:
