--- a/plugins/io/fiftyone.yml
+++ b/plugins/io/fiftyone.yml
@@ -6,5 +6,9 @@ fiftyone:
 url: https://github.com/voxel51/fiftyone-plugins/blob/main/plugins/io/README.md
 license: Apache 2.0
 operators:
-  - add_samples
+  - import_samples
+  - merge_samples
+  - merge_labels
+  - compute_metadata
   - export_samples
+  - draw_labels
