--- a/plugins/brain/fiftyone.yml
+++ b/plugins/brain/fiftyone.yml
@@ -15,3 +15,13 @@ operators:
   - load_brain_view
   - rename_brain_run
   - delete_brain_run
+secrets:
+  - FIFTYONE_BRAIN_SIMILARITY_QDRANT_URL
+  - FIFTYONE_BRAIN_SIMILARITY_QDRANT_API_KEY
+  - FIFTYONE_BRAIN_SIMILARITY_QDRANT_GRPC_PORT
+  - FIFTYONE_BRAIN_SIMILARITY_QDRANT_PREFER_GRPC
+  - FIFTYONE_BRAIN_SIMILARITY_PINECONE_API_KEY
+  - FIFTYONE_BRAIN_SIMILARITY_PINECONE_ENVIRONMENT
+  - FIFTYONE_BRAIN_SIMILARITY_MILVUS_USER
+  - FIFTYONE_BRAIN_SIMILARITY_MILVUS_PASSWORD
+  - FIFTYONE_BRAIN_SIMILARITY_MILVUS_URI
