adding operator skeleton

--- a/plugins/plugin_builder/fiftyone.yml
+++ b/plugins/plugin_builder/fiftyone.yml
@@ -5,4 +5,5 @@ version: "1.0.0"
 description: "Build custom plugin components from the FiftyOne App!"
 url: "https://github.com/jacobmarks/plugin-builder-plugin/blob/main/README.md"
 operators:
-  - build_a_plugin
+  - build_component
+  - build_operator_skeleton
