--- a/plugins/annotation/fiftyone.yml
+++ b/plugins/annotation/fiftyone.yml
@@ -2,7 +2,7 @@ name: "@voxel51/annotation"
 description: Utilities for integrating FiftyOne with annotation tools
 version: 1.0.0
 fiftyone:
-  version: "*"
+  version: ">=0.22"
 url: https://github.com/voxel51/fiftyone-plugins/blob/main/plugins/annotation/README.md
 license: Apache 2.0
 operators:
