--- a/plugins/evaluation/fiftyone.yml
+++ b/plugins/evaluation/fiftyone.yml
@@ -2,7 +2,7 @@ name: "@voxel51/evaluation"
 description: Utilities for evaluating models with FiftyOne
 version: 1.0.0
 fiftyone:
-  version: "*"
+  version: ">=0.22"
 url: https://github.com/voxel51/fiftyone-plugins/blob/main/plugins/evaluation/README.md
 license: Apache 2.0
 operators:
