--- a/plugins/indexes/fiftyone.yml
+++ b/plugins/indexes/fiftyone.yml
@@ -2,7 +2,7 @@ name: "@voxel51/indexes"
 description: Utilities working with FiftyOne database indexes
 version: 1.0.0
 fiftyone:
-  version: "*"
+  version: ">=0.22"
 url: https://github.com/voxel51/fiftyone-plugins/blob/main/plugins/indexes/README.md
 license: Apache 2.0
 operators:
