--- a/plugins/utils/fiftyone.yml
+++ b/plugins/utils/fiftyone.yml
@@ -2,7 +2,7 @@ name: "@voxel51/utils"
 description: A collection of utility operators
 version: 1.0.0
 fiftyone:
-  version: "*"
+  version: ">=0.22"
 url: https://github.com/voxel51/fiftyone-plugins/blob/main/plugins/utils/README.md
 license: Apache 2.0
 operators:
