--- a/plugins/evaluation/fiftyone.yml
+++ b/plugins/evaluation/fiftyone.yml
@@ -3,7 +3,7 @@ description: Utilities for evaluating models with FiftyOne
 version: 1.0.0
 fiftyone:
   version: ">=0.22"
-url: https://github.com/voxel51/fiftyone-plugins/blob/main/plugins/evaluation/README.md
+url: https://github.com/voxel51/fiftyone-plugins/tree/main/plugins/evaluation
 license: Apache 2.0
 operators:
   - evaluate_model
