--- a/plugins/hello-world/fiftyone.yml
+++ b/plugins/hello-world/fiftyone.yml
@@ -3,7 +3,7 @@ description: An example of JS and Python components in a single plugin
 version: 1.0.0
 fiftyone:
   version: "*"
-url: https://github.com/voxel51/fiftyone-plugins/blob/main/plugins/hello-world/README.md
+url: https://github.com/voxel51/fiftyone-plugins/tree/main/plugins/hello-world
 license: Apache 2.0
 operators:
   - count_samples
