--- a/plugins/indexes/fiftyone.yml
+++ b/plugins/indexes/fiftyone.yml
@@ -3,7 +3,7 @@ description: Utilities working with FiftyOne database indexes
 version: 1.0.0
 fiftyone:
   version: ">=0.22"
-url: https://github.com/voxel51/fiftyone-plugins/blob/main/plugins/indexes/README.md
+url: https://github.com/voxel51/fiftyone-plugins/tree/main/plugins/indexes
 license: Apache 2.0
 operators:
   - manage_indexes
