--- a/plugins/io/fiftyone.yml
+++ b/plugins/io/fiftyone.yml
@@ -3,7 +3,7 @@ description: A collection of import/export utilities
 version: 1.0.0
 fiftyone:
   version: ">=0.22"
-url: https://github.com/voxel51/fiftyone-plugins/blob/main/plugins/io/README.md
+url: https://github.com/voxel51/fiftyone-plugins/tree/main/plugins/io
 license: Apache 2.0
 operators:
   - import_samples
