--- a/plugins/python-view/fiftyone.yml
+++ b/plugins/python-view/fiftyone.yml
@@ -3,7 +3,7 @@ description: Create views in the FiftyOne App with Python
 version: 1.0.0
 fiftyone:
   version: "*"
-url: https://github.com/voxel51/fiftyone-plugins/blob/main/plugins/python-view/README.md
+url: https://github.com/voxel51/fiftyone-plugins/tree/main/plugins/python-view
 license: Apache 2.0
 operators:
   - create_view_with_python
