--- a/plugins/annotation/fiftyone.yml
+++ b/plugins/annotation/fiftyone.yml
@@ -3,7 +3,7 @@ description: Utilities for integrating FiftyOne with annotation tools
 version: 1.0.0
 fiftyone:
   version: ">=0.22"
-url: https://github.com/voxel51/fiftyone-plugins/blob/main/plugins/annotation/README.md
+url: https://github.com/voxel51/fiftyone-plugins/tree/main/plugins/annotation
 license: Apache 2.0
 operators:
   - request_annotations
