--- a/plugins/utils/fiftyone.yml
+++ b/plugins/utils/fiftyone.yml
@@ -3,7 +3,7 @@ description: A collection of utility operators
 version: 1.0.0
 fiftyone:
   version: ">=0.22"
-url: https://github.com/voxel51/fiftyone-plugins/blob/main/plugins/utils/README.md
+url: https://github.com/voxel51/fiftyone-plugins/tree/main/plugins/utils
 license: Apache 2.0
 operators:
   - create_dataset
