--- a/plugins/brain/fiftyone.yml
+++ b/plugins/brain/fiftyone.yml
@@ -8,6 +8,7 @@ license: Apache 2.0
 operators:
   - compute_visualization
   - compute_similarity
+  - sort_by_similarity
   - compute_uniqueness
   - compute_mistakenness
   - compute_hardness
