add_similar_samples operator

--- a/plugins/brain/fiftyone.yml
+++ b/plugins/brain/fiftyone.yml
@@ -9,6 +9,7 @@ operators:
   - compute_visualization
   - compute_similarity
   - sort_by_similarity
+  - add_similar_samples
   - compute_uniqueness
   - compute_mistakenness
   - compute_hardness
