declaring darwin secrets

--- a/plugins/annotation/fiftyone.yml
+++ b/plugins/annotation/fiftyone.yml
@@ -20,3 +20,5 @@ secrets:
   - FIFTYONE_LABELBOX_API_KEY
   - FIFTYONE_LABELSTUDIO_URL
   - FIFTYONE_LABELSTUDIO_API_KEY
+  - FIFTYONE_DARWIN_CONFIG_CLS
+  - FIFTYONE_DARWIN_API_KEY
