example target view

--- a/plugins/examples/fiftyone.yml
+++ b/plugins/examples/fiftyone.yml
@@ -29,5 +29,6 @@ operators:
   - example_secrets
   - example_file_drop
   - lazy_field_example
+  - example_target_view
 secrets:
   - FIFTYONE_EXAMPLE_SECRET
