apply saved view operator

--- a/plugins/utils/fiftyone.yml
+++ b/plugins/utils/fiftyone.yml
@@ -12,6 +12,7 @@ operators:
   - rename_dataset
   - delete_dataset
   - delete_samples
+  - apply_saved_view
   - compute_metadata
   - generate_thumbnails
   - delegate
