--- a/plugins/dashboard/fiftyone.yml
+++ b/plugins/dashboard/fiftyone.yml
@@ -8,6 +8,6 @@ license: Apache 2.0
 operators:
   - plotly_plot_controller
   - plotly_plot_operator
-  - plot_panel_operator
+  - dashboard
   - initialize_dashboard
   - plot_panel_view_change
