--- a/plugins/panel_examples/fiftyone.yml
+++ b/plugins/panel_examples/fiftyone.yml
@@ -8,3 +8,6 @@ license: Apache 2.0
 operators:
   - inc_count_panel
   - todo_list_panel
+  - ctx_change_events_panel
+  - embeddings_panel
+  - tutorial_panel
