--- a/plugins/panel_examples/fiftyone.yml
+++ b/plugins/panel_examples/fiftyone.yml
@@ -10,3 +10,5 @@ operators:
   - todo_list_panel
   - ctx_change_events_panel
   - embeddings_panel
+  - dashboard_example_panel
+  - evaluation_lite_panel
