--- a/plugins/panel-examples/fiftyone.yml
+++ b/plugins/panel-examples/fiftyone.yml
@@ -1,8 +1,8 @@
 name: "@voxel51/panel-examples"
-description: Examples of how to build Python based panels within FiftyOne
+description: A collection of example panels demonstrating common patterns for building Python panels
 version: 1.0.0
 fiftyone:
-  version: "*"
+  version: ">=0.25"
 url: https://github.com/voxel51/fiftyone-plugins/tree/main/plugins/panel-examples
 license: Apache 2.0
 panels:
@@ -12,9 +12,9 @@ panels:
   - example_table
   - example_media_player
   - example_image
-  - example_multi_view
-  - example_duplicated
+  - example_multiview
+  - example_inheritance
   - example_inputs
   - example_interactive_plot
   - example_dropdown_menu
-  - example_walkthrough_tutorial
+  - example_walkthrough
