--- a/plugins/dashboard/fiftyone.yml
+++ b/plugins/dashboard/fiftyone.yml
@@ -1,11 +1,11 @@
-name: "@voxel51/custom_dashboard"
+name: "@voxel51/dashboard"
 description: Build custom dashboards for your FiftyOne datasets
 version: 1.0.0
 fiftyone:
   version: ">=0.25.0"
-url: https://github.com/voxel51/fiftyone-plugins/tree/main/plugins/custom-dashboard
+url: https://github.com/voxel51/fiftyone-plugins/tree/main/plugins/dashboard
 license: Apache 2.0
 operators:
   - configure_plot
 panels:
-  - custom_dashboard
+  - dashboard
