--- a/plugins/dashboard/fiftyone.yml
+++ b/plugins/dashboard/fiftyone.yml
@@ -1,5 +1,5 @@
 name: "@voxel51/dashboard"
-description: Build custom dashboards for your FiftyOne datasets
+description: Build custom dashboards to display statistics of interest about your FiftyOne datasets
 version: 1.0.0
 fiftyone:
   version: ">=0.25.0"
