Add FIFTYONE_CVAT_EMAIL to annotation plugin

--- a/plugins/annotation/fiftyone.yml
+++ b/plugins/annotation/fiftyone.yml
@@ -17,6 +17,7 @@ secrets:
   - FIFTYONE_ANNOTATION_DEFAULT_BACKEND
   - FIFTYONE_CVAT_URL
   - FIFTYONE_CVAT_USERNAME
+  - FIFTYONE_CVAT_EMAIL
   - FIFTYONE_CVAT_PASSWORD
   - FIFTYONE_LABELBOX_URL
   - FIFTYONE_LABELBOX_API_KEY
