--- a/plugins/plugins/fiftyone.yml
+++ b/plugins/plugins/fiftyone.yml
@@ -1,12 +1,13 @@
 name: "@voxel51/plugins"
 description: Utilities for managing and building FiftyOne plugins
-version: 1.0.2
+version: 1.0.3
 fiftyone:
   version: ">=0.22.1"
 url: https://github.com/voxel51/fiftyone-plugins/tree/main/plugins/plugins
 license: Apache 2.0
 operators:
   - install_plugin
+  - delete_plugin
   - manage_plugins
   - build_plugin_component
   - build_operator_skeleton
