add prompt example

--- a/plugins/panel-examples/fiftyone.yml
+++ b/plugins/panel-examples/fiftyone.yml
@@ -17,3 +17,6 @@ panels:
   - example_interactive_plot
   - example_dropdown_menu
   - example_walkthrough
+  - example_prompt
+operators:
+  - example_message
