--- a/plugins/metric-examples/fiftyone.yml
+++ b/plugins/metric-examples/fiftyone.yml
@@ -1,5 +1,5 @@
 name: "@voxel51/metric-examples"
-description: Example metrics
+description: Example evaluation metrics
 version: 1.0.0
 fiftyone:
   version: ">=1.3.0"
@@ -7,5 +7,5 @@ url: https://github.com/voxel51/fiftyone-plugins/tree/main/plugins/metric-exampl
 license: Apache 2.0
 panels:
   - example_metric
-  - absolute_error
   - mean_absolute_error
+  - mean_squared_error
