add support for configuring allowed licenses for models/datasets

--- a/plugins/brain/fiftyone.yml
+++ b/plugins/brain/fiftyone.yml
@@ -27,3 +27,4 @@ secrets:
   - FIFTYONE_BRAIN_SIMILARITY_MILVUS_USER
   - FIFTYONE_BRAIN_SIMILARITY_MILVUS_PASSWORD
   - FIFTYONE_BRAIN_SIMILARITY_MILVUS_URI
+  - FIFTYONE_ZOO_ALLOWED_MODEL_LICENSES
