--- a/plugins/operator-examples/fiftyone.yml
+++ b/plugins/operator-examples/fiftyone.yml
@@ -31,5 +31,6 @@ operators:
   - example_lazy_field
   - example_python_view
   - example_complex_execution
+  - set_sample_modal
 secrets:
   - FIFTYONE_EXAMPLE_SECRET
