--- a/plugins/brain/fiftyone.yml
+++ b/plugins/brain/fiftyone.yml
@@ -7,6 +7,7 @@ url: https://github.com/voxel51/fiftyone-plugins/tree/main/plugins/brain
 license: Apache 2.0
 operators:
   - compute_visualization
+  - manage_visualization_indexes
   - compute_similarity
   - sort_by_similarity
   - add_similar_samples
