--- a/plugins/dashboard/fiftyone.yml
+++ b/plugins/dashboard/fiftyone.yml
@@ -7,5 +7,6 @@ url: https://github.com/voxel51/fiftyone-plugins/tree/main/plugins/dashboard
 license: Apache 2.0
 operators:
   - configure_plot
+  - clear_dashboard_cache
 panels:
   - dashboard
