--- a/plugins/brain/fiftyone.yml
+++ b/plugins/brain/fiftyone.yml
@@ -18,6 +18,10 @@ operators:
   - load_brain_view
   - rename_brain_run
   - delete_brain_run
+  - find_exact_duplicate_images
+  - deduplicate_exact_duplicates
+  - find_approximate_duplicate_images
+  - deduplicate_approximate_duplicates
 secrets:
   - FIFTYONE_BRAIN_SIMILARITY_QDRANT_URL
   - FIFTYONE_BRAIN_SIMILARITY_QDRANT_API_KEY
