2nd round of PR comments

--- a/package.json
+++ b/package.json
@@ -25,26 +25,23 @@
         "ts-node": "^10.9.1"
     },
     "resolutions": {
-        "@fiftyone/fiftyone": "portal:../../fo/fiftyone/app",
-        "@fiftyone/aggregations": "portal:../../fo/fiftyone/app/packages/aggregations",
-        "@fiftyone/app": "portal:../../fo/fiftyone/app/packages/app",
-        "@fiftyone/components": "portal:../../fo/fiftyone/app/packages/components",
-        "@fiftyone/core": "portal:../../fo/fiftyone/app/packages/core",
+        "@fiftyone/fiftyone": "portal:../fiftyone/app",
+        "@fiftyone/aggregations": "portal:../fiftyone/app/packages/aggregations",
+        "@fiftyone/app": "portal:../fiftyone/app/packages/app",
+        "@fiftyone/components": "portal:../fiftyone/app/packages/components",
+        "@fiftyone/core": "portal:../fiftyone/app/packages/core",
         "@fiftyone/dataset": "portal:../fiftyone/app/packages/dataset",
         "FiftyOne": "portal:../fiftyone/app/packages/desktop",
-        "@fiftyone/embeddings": "portal:../../fo/fiftyone/app/packages/embeddings",
-        "@fiftyone/flashlight": "portal:../../fo/fiftyone/app/packages/flashlight",
-        "@fiftyone/looker": "portal:../../fo/fiftyone/app/packages/looker",
-        "@fiftyone/looker-3d": "portal:../../fo/fiftyone/app/packages/looker-3d",
-        "@fiftyone/map": "portal:../../fo/fiftyone/app/packages/map",
-        "@fiftyone/plugins": "portal:../../fo/fiftyone/app/packages/plugins",
-        "@fiftyone/relay": "portal:../../fo/fiftyone/app/packages/relay",
-        "@fiftyone/spaces": "portal:../../fo/fiftyone/app/packages/spaces",
-        "@fiftyone/state": "portal:../../fo/fiftyone/app/packages/state",
-        "@fiftyone/utilities": "portal:../../fo/fiftyone/app/packages/utilities",
-        "@fiftyone/operators": "portal:../../fo/fiftyone/app/packages/operators",
-        "@fiftyone/analytics": "portal:../../fo/fiftyone/app/packages/analytics",
-        "@fiftyone/playback": "portal:../../fo/fiftyone/app/packages/playback",
-        "@fiftyone/spotlight": "portal:../../fo/fiftyone/app/packages/spotlight"
+        "@fiftyone/embeddings": "portal:../fiftyone/app/packages/embeddings",
+        "@fiftyone/flashlight": "portal:../fiftyone/app/packages/flashlight",
+        "@fiftyone/looker": "portal:../fiftyone/app/packages/looker",
+        "@fiftyone/looker-3d": "portal:../fiftyone/app/packages/looker-3d",
+        "@fiftyone/map": "portal:../fiftyone/app/packages/map",
+        "@fiftyone/plugins": "portal:../fiftyone/app/packages/plugins",
+        "@fiftyone/relay": "portal:../fiftyone/app/packages/relay",
+        "@fiftyone/spaces": "portal:../fiftyone/app/packages/spaces",
+        "@fiftyone/state": "portal:../fiftyone/app/packages/state",
+        "@fiftyone/utilities": "portal:../fiftyone/app/packages/utilities",
+        "@fiftyone/operators": "portal:../fiftyone/app/packages/operators"
     }
 }
