add support for storing embeddings in an existing similarity index

--- a/plugins/zoo/fiftyone.yml
+++ b/plugins/zoo/fiftyone.yml
@@ -9,5 +9,14 @@ operators:
   - load_zoo_dataset
   - apply_zoo_model
 secrets:
+  - FIFTYONE_BRAIN_SIMILARITY_QDRANT_URL
+  - FIFTYONE_BRAIN_SIMILARITY_QDRANT_API_KEY
+  - FIFTYONE_BRAIN_SIMILARITY_QDRANT_GRPC_PORT
+  - FIFTYONE_BRAIN_SIMILARITY_QDRANT_PREFER_GRPC
+  - FIFTYONE_BRAIN_SIMILARITY_PINECONE_API_KEY
+  - FIFTYONE_BRAIN_SIMILARITY_PINECONE_ENVIRONMENT
+  - FIFTYONE_BRAIN_SIMILARITY_MILVUS_USER
+  - FIFTYONE_BRAIN_SIMILARITY_MILVUS_PASSWORD
+  - FIFTYONE_BRAIN_SIMILARITY_MILVUS_URI
   - FIFTYONE_ZOO_ALLOWED_MODEL_LICENSES
   - FIFTYONE_ZOO_ALLOWED_DATASET_LICENSES
