--- a/plugins/vlmrun-plugin/fiftyone.yml
+++ b/plugins/vlmrun-plugin/fiftyone.yml
@@ -7,4 +7,10 @@ url: https://github.com/voxel51/fiftyone-plugins/tree/main/plugins/vlmrun
 license: Apache 2.0
 operators:
   # Video Processing
-  - transcribe_video
+  - vlmrun_transcribe_video
+  # Image Processing
+  - vlmrun_classify_images
+  - vlmrun_caption_images
+  # Document Processing
+  - vlmrun_classify_documents
+  - vlmrun_parse_invoices
