add support for specifying which zoo datasets/models should be available to App users

--- a/plugins/zoo/fiftyone.yml
+++ b/plugins/zoo/fiftyone.yml
@@ -18,5 +18,7 @@ secrets:
   - FIFTYONE_BRAIN_SIMILARITY_MILVUS_USER
   - FIFTYONE_BRAIN_SIMILARITY_MILVUS_PASSWORD
   - FIFTYONE_BRAIN_SIMILARITY_MILVUS_URI
+  - FIFTYONE_ZOO_ALLOWED_MODEL_NAMES
   - FIFTYONE_ZOO_ALLOWED_MODEL_LICENSES
+  - FIFTYONE_ZOO_ALLOWED_DATASET_NAMES
   - FIFTYONE_ZOO_ALLOWED_DATASET_LICENSES
