--- a/plugins/brain/fiftyone.yml
+++ b/plugins/brain/fiftyone.yml
@@ -32,4 +32,5 @@ secrets:
   - FIFTYONE_BRAIN_SIMILARITY_MILVUS_USER
   - FIFTYONE_BRAIN_SIMILARITY_MILVUS_PASSWORD
   - FIFTYONE_BRAIN_SIMILARITY_MILVUS_URI
+  - FIFTYONE_ZOO_ALLOWED_MODEL_NAMES
   - FIFTYONE_ZOO_ALLOWED_MODEL_LICENSES
