add new vlm run domains: person detection, object detection, and document structure

--- a/plugins/vlmrun-plugin/fiftyone.yml
+++ b/plugins/vlmrun-plugin/fiftyone.yml
@@ -11,6 +11,9 @@ operators:
   # Image Processing
   - vlmrun_classify_images
   - vlmrun_caption_images
+  - vlmrun_object_detection
+  - vlmrun_person_detection
   # Document Processing
   - vlmrun_classify_documents
   - vlmrun_parse_invoices
+  - vlmrun_layout_detection
