--- a/plugins/metageo/package.json
+++ b/plugins/metageo/package.json
@@ -20,8 +20,11 @@
         "@fiftyone/relay": "portal:../fiftyone/app/packages/relay",
         "@fiftyone/state": "portal:../fiftyone/app/packages/state",
         "@fiftyone/utilities": "portal:../fiftyone/app/packages/utilities",
+        "@mapbox/mapbox-gl-draw": "^1.5.0",
+        "mapbox-gl": "^3.15.0",
         "react": "^18.2.0",
-        "react-dom": "^18.2.0"
+        "react-dom": "^18.2.0",
+        "react-map-gl": "^8.1.0"
     },
     "devDependencies": {
         "@rollup/plugin-node-resolve": "^15.3.0",
